# Miscellaneous

./: .classpath  README.md  curves
24/: solver.py
ana_assignments/: make.sh  sort-user-strings.cpp
chat/: client.py  common.py  server.py
cistercian_numerals/: .cistercian.py.swp  animate.bash  cistercian.py
finances/: finances  history.txt  launcher.cpp  make.sh
kalman_filter/: gsl_make.sh  gsl_test  gsl_test.c  gsl_test.c.save  kalman  kalman.c  kalman.h  kalman_make.sh  main.c
logging/: .gitignore  Makefile  arduino_msg.hpp  comm.hpp  main.cpp  make.sh  messages.hpp  read.cpp  sandbox.cpp  ts.cpp  write.cpp
matrix/: Kalman.cpp  Kalman.h  Matrix.cpp  Matrix.h  make.sh  matrix  test.cpp
mohr/: .gitignore  make.sh  mohr  mohr.cpp
pid/: Pid.cpp  Pid.h  main.cpp  make.sh  make_pid.sh  pid  pid_lib.h
pid_controller/: controller.h  main.c  pid  pid_lib.c  pid_lib.h
register/: make_register.sh  register  register.c
rocketry/: .gitignore  FlapControl.cpp  FlapControl.h  Kalman.cpp  Kalman.h  alt_filter  alt_filter.cpp  controller.cpp  equations.c  equations.cpp  equations.h  flap  guidance  guidance.c  guidance.cpp  kalman_lib.cpp  kalman_lib.h  make_alt.sh  make_flap.sh  make_guidance.sh  make_matrix.sh  make_vel.sh  matrix  matrix.cpp  velocity  velocity.cpp
transmission/: CMakeLists.txt  main.cpp  make.sh  params.txt  timing.txt
transmission/include/transmission/: interpreter.hpp  packet.hpp  serial.hpp  server.hpp  util.hpp
transmission/src/: asio.cpp  hexdump.cpp  interpreter.cpp  main.cpp  packet.cpp  play.cpp  pprintf.cpp  serial.cpp  server.cpp  util.cpp
(+319 files in other folders)
